# nlgoals

./: .gitattributes  .gitignore  README.md  gen_pip_reqs.sh  main.tex  pyproject.toml  requirements.txt
data/calvin/: README.md  download_data.sh  download_env_files.sh
documents/: .gitignore  mypreamble.sty  plan.xlsx  references-bibtex.bib  references.bib  rubric.md
documents/project-proposal/: proposal.md  proposal_strict.md
documents/proposal/: proposal.md  proposal_strict.md
documents/sharedsubfiles/: introduction.tex  methodology.tex  relatedwork.tex
documents/task-specification/: main.tex
documents/thesis-main/: bibentries.bib  main.tex  mypreamble.sty  references-bibtex.bib  uvalogo_regular_p_nl.eps
documents/thesis-main/logos/: uvalogo_tag_p.eps
documents/thesis-main/subfiles/: abstract.tex  acknowledgements.tex  appendix.tex  background.tex  conclusion.tex  experiments.tex  introduction.tex  method.tex  relatedwork.tex  titlepage.tex
documents/thesis-proposal/: bibstyle.bst  main.tex  mypreamble.sty  references-bibtex.bib
documents/thesis-proposal/subfiles/: introduction.tex  method.tex  methodology.tex  planning.tex  relatedwork.tex
nlgoals/models/: clipt.py
nlgoals/run/: train-clipt.py
nlgoals/tests/: clipt_test.py
notebooks/: README.md  calvin-familiarization.ipynb  cclipt-emb-clusters.ipynb  clip-models.ipynb  clip-ood-check-SD.ipynb  clip-sanity-check.ipynb  clipt-eval.ipynb  clipt-similarity-matrices.ipynb  diffusion-poc.ipynb  eval-gmg.ipynb  gcbc-calvin-eval-results.ipynb  gcbc-calvin-random-results.ipynb  poc.ipynb  sr_train_curve.ipynb
requirements/: pre-reqs.txt  requirements-complete.txt  requirements-minimal.txt
slurm/: .secrets-template  env.job  eval-task_classifier.job  setup_calvin.sh  train-clipt.job  train-gcbc.job
slurm/babyai/: gen_cclipt_embs.job  gen_clipt_embs.job  gen_demos_cc_single.job  gen_demos_cc_small.job  gen_demos_cc_small_para.job  gen_demos_large.job  gen_demos_small.job  gen_demos_small_para.job  gen_para_clipt_embs.job
slurm/babyai/legacy/: gen_demos_cc_single.job  gen_demos_cc_small.job
slurm/clipt/: train-cclipt.job
slurm/clipt/babyai/: eval-single.job  train-cclipt.job  train-single-para.job  train-single.job
slurm/clipt/calvin/: eval-single.job  train-single.job
slurm/eval-task_classifier/: array.job  array.txt  single.job
slurm/gcbc/: eval-calvin.job  sweep-array.job  train-single.job
slurm/gcbc/babyai/: eval-array.job  eval-array.txt  train-multi-array.job  train-multi.job  train-multimodal-array.job  train-multimodal.job  train-single.job
slurm/gcbc/calvin/: eval-array-seeds.job  eval-array-seeds.txt  eval-array.job  eval-array.txt  eval-random.job  eval-random.txt  eval-single.job  eval-textual.job  eval-visual.job  sweep-array.job  train-array.job  train-array.txt  train-single.job
slurm/pre-clip-calvin/: array.job  array.txt
slurm/rcbc/babyai/: eval-array.job  eval-array.txt  train-multi-array.job  train-multi.job  train-single.job
slurm/train-task_classifier/: array.job  array.txt  single.job
src/nlgoals/: interfaces.py  trainer.py  utils.py
src/nlgoals/babyai/: custom_envs.py  eval_utils.py
src/nlgoals/babyai/custom/: __init__.py  constants.py  envs.py  utils.py  wrappers.py
src/nlgoals/babyai/rl/: __init__.py
src/nlgoals/babyai/scripts/: compare_dataeff.py  enjoy.py  eval_bot.py  evaluate.py  il_dataeff.py  (+10 more)
src/nlgoals/data/: calvin.py  transforms.py  utils.py
src/nlgoals/interfaces/: clipt.py  gcbc.py  rcbc.py
src/nlgoals/losses/: contrastive.py  dlml.py
src/nlgoals/models/: clipt.py  gcbc.py  rcbc.py  task-classifier.py  task_classifier.py
src/nlgoals/run/: clipt-visual-eval.py  dataset-profiler.py  eval-calvin.py  eval-clipt.py  eval-gcbc-calvin-mp.py  eval-gcbc-calvin.py  eval-task_classifier.py  pre-clip-calvin.py  profile-gcbc.py  sweep-gcbc.py  train-clipt.py  train-gcbc.py  train-task-classifier.py  train-task_classifier.py
src/nlgoals/trainer/: clipt.py  gcbc.py  rcbc.py  task_classifier.py  utils.py
src/nlgoals/utils/: misc.py
sweeps/: gcbc.yaml
tests/data/: calvin_test.py
tests/models/: clipt_test.py  gcbc_test.py
(+84 files in other folders)
