[tool.poetry]
name = "nlgoals"
version = "0.2.0"
description = "Natural Language Goals"
authors = ["Giulio Starace <giulio.starace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# # note: you will have to install these two with pip
cmake = "3.18.4"
setuptools = "<58"
# the rest should work with poetry
matplotlib = "^3.7.1"
procgen = "^0.10.7"
gym = "^0.26.2"
gym3 = "^0.3.3"
transformers = "<=4.28"
fonttools = "!=4.39.1"
seaborn = "^0.12.2"
jsonargparse = "^4.20.1"
# pytorch-lightning = "<1.5"
wandb = "^0.15.0"
datasets = "^2.12.0"
numpy = "<1.24"
pyhash = "^0.9.3"
# torchmetrics = "<0.7"
torch = "^2.0.1"
pytorch-lightning = ">=1.9.2"
av = "^10.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
black = { extras = ["jupyter"], version = "^23.1.0" }
jupyterlab-code-formatter = "<1.6"
ipywidgets = "^8.0.4"
nbdime = "^3.1.1"
pytest = "^7.3.1"
pytest-lazy-fixture = "^0.6.3"
pytest-profiling = "^1.7.0"
rope = "^1.8.0"

[tool.poetry.group.calvin.dependencies]
opencv-python = "<4.7"
tacto = { git = "https://github.com/thesofakillers/tacto.git", branch = 'main' }
calvin-env = { git = "https://github.com/thesofakillers/calvin_env.git", branch = 'main' }
calvin = { git = "https://github.com/thesofakillers/calvin.git", branch = 'main', subdirectory = "calvin_models" }
numba = "^0.56.4"

[tool.poetry.group.diffusion.dependencies]
diffusers = "^0.14.0"
accelerate = "^0.17.1"
safetensors = "^0.3.0"

[tool.poetry.group.babyai.dependencies]
minigrid = { git = "https://github.com/thesofakillers/Minigrid.git", rev = "giulio" }
blosc = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
